[package]
name = "magic-pack"
version = "0.11.1"
authors = ["Zonda Yang <u226699@gmail.com>"]
description = "Magic pack tool"
homepage = "https://github.com/zondatw/magic-pack"
repository = "https://github.com/zondatw/magic-pack"
keywords = ["compress", "decompress"]
edition = "2021"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
flate2 = "1.0"
tar = "0.4.45"
bzip2 = "0.4.4"
zip = "0.6.4"
walkdir = "2"
sevenz-rust = "0.6"
xz2 = "0.1"
zstd = "0.13"
lz4_flex = { version = "0.11", features = ["frame"] }
serde = { version = "=1.0.228", features = ["derive"], optional = true }
serde_json = { version = "=1.0.149", optional = true }
itoa = { version = "=1.0.17", optional = true }
ryu = { version = "=1.0.22", optional = true }
memchr = { version = "=2.7.6", optional = true }
zmij = { version = "=1.0.17", optional = true }

[features]
default = []
mcp = ["dep:serde", "dep:serde_json", "dep:itoa", "dep:ryu", "dep:memchr", "dep:zmij"]

[lib]
name = "magic_pack"
path = "src/lib.rs"

[[bin]]
name = "magic-pack"
path = "src/main.rs"

[[bin]]
name = "magic-pack-mcp"
path = "src/bin/magic-pack-mcp.rs"
required-features = ["mcp"]

[package.metadata.deb]
maintainer = "Zonda Yang <u226699@gmail.com>"
copyright = "2023, Zonda Yang <u226699@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = "A CLI tool for compressing and decompressing files with multiple formats including gz, bz2, xz, zst, lz4, zip, 7z, and tar variants."
depends = "libc6 (>= 2.17), libgcc-s1"
section = "utils"
priority = "optional"
assets = [
    ["target/release/magic-pack", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/magic-pack/README.md", "644"],
]
